--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,25 @@
+html {
+  background-color: rgba(0, 0, 0, 0.733);
+}
+
+h1 {
+  color:rgb(240, 240, 243);
+  font-size: 3rem;
+}
+
+p {
+  color:rgb(240, 240, 243);
+  font-size: 1.5rem;
+}
+
+.smallP {
+  font-size: 1rem;
+}
+
 .App {
   text-align: center;
+  max-height: 100vh;
+  max-width: 100%;
 }
 
 .sqButton {
@@ -8,7 +28,13 @@
   min-height: 100px;
   max-height: 200px;
   background-color: rgb(56, 59, 59);
-  color: ghostwhite;
+  color: rgb(240, 240, 243);
+  font-size: 1.5rem;
+}
+
+
+.square {
+  padding: 5px;
 }
 
 .board {
