--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,8 @@ button {
 
 .App {
   text-align: center;
-  max-height: 100vh;
-  max-width: 100vw;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .sqButton {
